updated manifest file

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "start_url": "/?home=true",
+    "start_url": "https://dkpettit.github.io/?home=true",
     "theme_color": "#000000",
     "background_color": "#FFFFFF",
     "display": "fullscreen",
